fixed nodes getting wrong color when selected

--- a/forceD3/force.css
+++ b/forceD3/force.css
@@ -12,7 +12,6 @@ html body {
 }
 
 .nodes {
-	fill: lightgrey;
 	stroke: black;
 	stroke-width: .5px;
 }
